import "j-system.piqi.proto" ;

message userid_list {
    repeated string elem = 1;
}

message recipient {
    // only one field at the time should be specified:
    optional bool all = 1;
    optional userid_list users = 2;
}

message result {
    // only one field at the time should be specified:
    optional bool ok = 1;
    optional bool stop = 2;
}

message message {
    required recipient recipient = 1;
    required string command_name = 2;
    repeated bytes command_args = 3;
}

message timer_repeats {
    // only one field at the time should be specified:
    optional bool infinity = 1;
    optional uint32 repeats = 2;
}

message timer {
    required string id = 1;
    required uint32 duration = 2;
    required timer_repeats repeats = 3;
}

message action {
    // only one field at the time should be specified:
    optional string stop_timer = 1;
    optional timer start_timer = 2;
    optional userid_list kick_player = 3;
    optional message message = 4;
}

message callback_response {
    required result result = 1;
    required bytes state = 2;
    repeated action actions = 3;
}

message response {
    // only one field at the time should be specified:
    optional callback_response response = 1;
    optional system_request system = 2;
}

