
message grant_coins_request {
    required string userid = 1;
    required uint32 coins = 2;
}

message buy_item_request {
    required string userid = 1;
    required uint32 shop_item_id = 2;
    required uint32 amount = 3;
}

message system_request {
    // only one field at the time should be specified:
    optional buy_item_request buy_item = 1;
    optional grant_coins_request grant_coins = 2;
}

message system_error {
    optional uint32 code = 1;
    optional string description = 2;
}

message system_response {
    // only one field at the time should be specified:
    optional bool ok = 1;
    optional system_error error = 2;
}

